--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - "5432:5432"
 
   backend:
-    build: ./backend
+    image: mtothec/miam-backend:latest
     environment:
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
     ports:
@@ -22,7 +22,7 @@ services:
       - db
 
   frontend:
-    build: ./frontend
+    image: mtothec/miam-frontend:latest
     ports:
       - "3000:3000"
     depends_on:
